# esp-aws-iot

./: .gitmodules
libraries/coreJSON/: CMakeLists.txt
libraries/corePKCS11/: CMakeLists.txt
libraries/ota-for-aws-iot-embedded-sdk/: CMakeLists.txt
libraries/ota-for-aws-iot-embedded-sdk/config/: ota_config.h
libraries/ota-for-aws-iot-embedded-sdk/port/: ota_pal.c  ota_pal.h
